<resources>
    <string name="app_name" translatable="false">Vitesse</string>
    <string name="no_candidate">No candidate</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="candidate">Candidate</string>
    <string name="search_candidate">Search a candidate</string>
    <string name="add_candidate">Add a candidate</string>
    <string name="edit_candidate">Edit a candidate</string>
    <string name="enter_date">Choose a date</string>
    <string name="select_date">Pick a date</string>
    <string name="format_date">mm/dd/yyyy</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="expected_salary">Expected salary</string>
    <string name="expected_salary_pounds">or %s</string>
    <string name="notes">Notes</string>
    <string name="birthday">Birthday</string>
    <string name="profile_picture">Profile picture</string>
    <string name="age">%s (%d years old)</string>

    <string name="save">Save</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="invalid_format">Invalid format</string>
    <string name="error_loading_candidates">Error while loading the candidates</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deletion">Deletion</string>
    <string name="sure_delete">Are you sure you want to delete this candidate? This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="added">Candidate successfully added</string>
    <string name="edited">Candidate successfully edited</string>
    <string name="deleted">Candidate successfully deleted</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="to_call">To Call</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="send_email">Send an email</string>
    <string name="send_sms">Send a SMS</string>
    <string name="no_email">No email application available</string>
    <string name="no_phone">No messaging application available</string>
    <string name="no_network">Check your Internet connection for the currency conversion</string>
    <string name="about">About</string>
    <string name="back">Back</string>
</resources>