<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/candidate"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:id="@+id/candidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candidate"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="8dp">

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:soundEffectsEnabled="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/favorites"
                android:padding="12dp"
                android:src="@drawable/selector_star" />

            <ImageButton
                android:id="@+id/iconEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:soundEffectsEnabled="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit"
                android:padding="12dp"
                android:src="@drawable/ic_edit" />

            <ImageButton
                android:id="@+id/iconDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:soundEffectsEnabled="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete"
                android:padding="12dp"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/actionButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePicture"
                android:paddingStart="0dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:id="@+id/phoneContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/phone"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:strokeColor="@color/primary_variant"
                        app:strokeWidth="1dp"
                        android:contentDescription="@string/to_call"
                        android:scaleType="center"
                        android:padding="1dp"
                        android:src="@drawable/ic_phone"
                        app:shapeAppearanceOverlay="@style/CircularImage"/>

                    <TextView
                        android:id="@+id/phoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textSize="12sp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/messageContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/message"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:strokeColor="@color/primary_variant"
                        app:strokeWidth="1dp"
                        android:contentDescription="@string/send_sms"
                        android:scaleType="center"
                        android:padding="1dp"
                        android:src="@drawable/ic_message"
                        app:shapeAppearanceOverlay="@style/CircularImage"/>

                    <TextView
                        android:id="@+id/messageLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sms"
                        android:textSize="12sp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/email"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:strokeColor="@color/primary_variant"
                        app:strokeWidth="1dp"
                        android:contentDescription="@string/send_email"
                        android:scaleType="center"
                        android:padding="1dp"
                        android:src="@drawable/ic_email"
                        app:shapeAppearanceOverlay="@style/CircularImage"/>

                    <TextView
                        android:id="@+id/emailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="12sp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actionButtons">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/about"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/birthdateEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="35dp"
                    tools:text="03/03/1989 (34 ans)"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:drawablePadding="35dp"
                    android:text="@string/birthday"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/salaryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/expected_salary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/salaryEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="35dp"
                    tools:text="3500 €"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/enterDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:drawablePadding="35dp"
                    tools:text="soit £ 3026,99"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salaryContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/notes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notesEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="35dp"
                    android:textSize="16sp"
                    tools:maxLines="10"
                    tools:text="@tools:sample/lorem/random"
                     />

            </LinearLayout>

            <!-- espace vertical !-->
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/notesContainer"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>