<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/profilePicture"
                    app:layout_constraintStart_toEndOf="@id/profilePicture"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/first_name" />

                <TextView
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="13dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/profilePicture"
                    app:layout_constraintStart_toEndOf="@id/profilePicture"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/last_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toStartOf="@id/first_name"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>